--- a/me.html
+++ b/me.html
@@ -71,7 +71,7 @@ SEEK RESPECT, NOT ATTENTION.</h3>
 							<section id="two" class="spotlights">
 								<section>
 									<a href="" class="image">
-										<img src="images/me-geek.jpg" alt="" data-position="center center" />
+										<img src="images/me-geek.JPG" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -90,7 +90,7 @@ SEEK RESPECT, NOT ATTENTION.</h3>
 								</section>
 								<section>
 									<a href="" class="image">
-										<img src="images/me-photo.jpg" alt="" data-position="top center" />
+										<img src="images/me-photo.JPG" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
