--- a/me.html
+++ b/me.html
@@ -71,7 +71,7 @@ SEEK RESPECT, NOT ATTENTION.</h3>
 							<section id="two" class="spotlights">
 								<section>
 									<a href="" class="image">
-										<img src="images/me-geek.JPG" alt="" data-position="center center" />
+										<img src="images/me-geek.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -106,7 +106,7 @@ SEEK RESPECT, NOT ATTENTION.</h3>
 								</section>
 								<section>
 									<a href="" class="image">
-										<img src="images/me-life.jpg" alt="" data-position="25% 25%" />
+										<img src="images/me-life.JPG" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
