--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 									<header class="major">
 										<h3>CONTACT</h3>
 									</header>
-									<h4>Feel free to reach out to me by </br> Email: frankie.yuan[at]yahoo.com </br> Phone: (217)8192-998 </br> Wechat: 15711086806</h4>
+									<h4>Feel free to reach out to me by </br> Email: frankie.yuan(at)yahoo.com </br> Phone: (217)8192-998 </br> Wechat: 15711086806</h4>
 									<ul class="actions">
 									</ul>
 								</div>
