--- a/peaband.html
+++ b/peaband.html
@@ -45,7 +45,7 @@
 									</header>
 									<span class="image main"><img src="peaband\images\peaband.jpg" alt="" /></span>
 									<p>Peaband is a conceptual wearable device product created by Fred JingYu Zheng, Wendy WanQin Wen, Susan Yi Cao, and Frankie Hao Yuan in 2016. They are high school students at Beijing Bayi School International Department(BYID), and this product is for Diamond Challenge, a business concept competition held by University of Delaware. Helped by their advisor, Martin Thompson, these group of high school students with enthusiasm were one of the three teams advanced into the semi-final via internet pitch. And they were invited to Delaware to participate the The Youth Entrepreneurship Summit (YES!).</p>
-									<p>If you have any thought about this product, please contact me with email - frankie.yuan(at)yahoo.com</p>
+									<p>If you have any thought about this product, please contact me with email - frankie.yuan[at]yahoo.com</p>
 									<a href="http://diamondchallenge.org/" target="_blank"><span class="image main"><img src="peaband\images\diamond.jpg" alt="" /></span></a>
 									<p>Steve Jobs said "I think if you do something and it turns out pretty good, then you should go do something else wonderful, not dwell on it for too long. Just figure out what's next." So we asked ourselves, what is next? What is New EXciting Technology?</p>
 									<p>Technology today, in the form of computers and mobile phones bring us so many conveniences. We can get whatever information whenever we want it, ... just not necessarily WHERE we want it.  Where is the easiest and the most convenient place for a person to look for and access information?</p>
