--- a/peaband.html
+++ b/peaband.html
@@ -41,7 +41,7 @@
 								<div class="inner">
 									<header class="major">
 										<h1>PeaBand</h1>
-										 <h3>Introducing</br>the Next Generation</br>Wearable Device</h3>
+										 <h4>Introducing the Next Generation Wearable Device</h4>
 									</header>
 									<span class="image main"><img src="peaband\images\peaband.jpg" alt="" /></span>
 									<p>Peaband is a conceptual wearable device product created by Fred JingYu Zheng, Wendy WanQin Wen, Susan Yi Cao, and Frankie Hao Yuan in 2016. They are high school students at Beijing Bayi School International Department(BYID), and this product is for Diamond Challenge, a business concept competition held by University of Delaware. Helped by their advisor, Martin Thompson, these group of high school students with enthusiasm were one of the three teams advanced into the semi-final via internet pitch. And they were invited to Delaware to participate the The Youth Entrepreneurship Summit (YES!).</p>
