--- a/hyphoto.html
+++ b/hyphoto.html
@@ -39,7 +39,7 @@
 					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
-								<img src="images/hyphoto/sakura.jpg" alt="" />
+								<img src="images/sakura.jpg" alt="" />
 							</span>
 							<header class="major">
 								<h1>HYPhoto</h1>
