--- a/hyphoto.html
+++ b/hyphoto.html
@@ -53,7 +53,7 @@
 <section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Under Construction - Use Photos to Record Life</h1>
+										<h1>Capture Life Moments</h1>
 									</header>
 
 									<!-- Content -->
