--- a/index.html
+++ b/index.html
@@ -1,151 +1,81 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>Hao Yuan (Frankie)</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<meta name="keywords" content="Hao Yuan,Frankie Yuan, Portfolio,Personal Website" />
-		<meta name="description" content="Make improvements, Not excuses. Seek respect, Not attention" />
-	</head>
-	<body class="is-preload">
-
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Header -->
-					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Frankie</strong> <span>Hao Yuan</span></a>
-						<nav>
-							<a href="#menu"></a>
-						</nav>
-					</header>
-				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="tensorflow.html">Tensorflow Project</a></li>
-							<li><a href="peaband.html">Conceptual Wearable Device</a></li>
-							<li><a href="vpn/index.html">Vitrual Private Network</a></li>
-							<li><a href="hyphoto.html">Amateur Photography</a></li>
-							<li><a href="me.html">About Me</a></li>
-						</ul>
-					</nav>
-
-				<!-- Banner -->
-					<section id="banner" class="major">
-						<div class="inner">
-							<header class="major">
-								<h1>Frankie - Hao Yuan</h1>
-							</header>
-							<div class="content">
-								<p>make Improvements, not Excuses.<br />
-								seek Respect, not Attention.</p>
-								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Hear Me</a></li>		
-								</ul>
-								<ul class="actions">
-									<li><a href="#two" class="button next scrolly">Contact Me</a></li>		
-								</ul>
-							</div>
-						</div>
-					</section>
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- One -->
-							<section id="one" class="tiles">
-								<article>
-									<span class="image">
-										<img src="images/tensorflow.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="tensorflow.html" class="link">Road Sign Recognition</a></h3>
-										<p>TensorFlow Project</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/peaband.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="peaband.html" class="link">Conceptual Wearable Device</a></h3>
-										<p>Entrepreneurship Competition</p>
-									</header>
-								</article>
-
-								<article>
-									<span class="image">
-										<img src="vpn/images/vpn.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="vpn/index.html" class="link">Virtual Private Network</a></h3>
-										<p>Connect you to the world (in Chinese)</p>
-									</header>
-								</article>
-
-								<article>
-									<span class="image">
-										<img src="images/hyphoto.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="hyphoto.html" class="link">Photography</a></h3>
-										<p>Landscape | City View | Portrait</p>
-									</header>
-								</article>
-
-								<article>
-									<span class="image">
-										<img src="images/me.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="me.html" class="link">About Me</a></h3>
-										<p>Attitude | Experience</p>
-									</header>
-								</article>
-							</section>
-
-						<!-- Two -->
-							<section id="two">
-								<div class="inner">
-									<header class="major">
-										<h3>CONTACT</h3>
-									</header>
-									<h4>Feel free to reach out to me by </br> Email: frankie.yuan[at]yahoo.com </br> Phone: (217)819-2998 </br> Wechat: 15711086806</h4>
-									<ul class="actions">
-									</ul>
-								</div>
-							</section>
-
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="https://www.facebook.com/frankiehaoyuan" target="_blank" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram"><span class="label">Weibo</span></a></li>
-								<li><a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://github.com/frankyhao" target="_blank" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/frankie-hao-yuan/" target="_blank" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Frankie Hao Yuan</li><li>Design: HTML5 UP</li>
-							</ul>
-						</div>
-					</footer>
-
-			</div>
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+<!DOCTYPE html>
+<title>Hao Yuan (Frankie)</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<link rel="stylesheet" href="assets/css/main.css"><noscript>
+<link rel="stylesheet" href="assets/css/noscript.css"></noscript>
+<meta name="keywords" content="Hao Yuan,Frankie Yuan, Portfolio,Personal Website">
+<meta name="description" content="Make improvements, Not excuses. Seek respect, Not attention">
+<body class="is-preload">
+<!-- Wrapper -->
+<div id="wrapper"><!-- Header -->
+<header id="header" class="alt"><a href="index.html" class="logo"><strong>Frankie</strong> <span>Hao Yuan</span></a>
+<nav><a href="#menu"></a></nav></header><!-- Menu -->
+<nav id="menu">
+<ul class="links">
+<li><a href="index.html">Home</a>
+<li><a href="tensorflow.html">Tensorflow Project</a>
+<li><a href="peaband.html">Conceptual Wearable Device</a>
+<li><a href="vpn/index.html">Vitrual Private Network</a>
+<li><a href="hyphoto.html">Amateur Photography</a>
+<li><a href="me.html">About Me</a></ul></nav><!-- Banner -->
+<section id="banner" class="major">
+<div class="inner">
+<header class="major">
+<h1>Frankie - Hao Yuan</h1></header>
+<div class="content">
+<p>make Improvements, not Excuses.<br>
+seek Respect, not Attention.
+<ul class="actions">
+<li><a href="#one" class="button next scrolly">Hear Me</a></ul>
+<ul class="actions">
+<li><a href="#two" class="button next scrolly">Contact Me</a></ul></div></div></section><!-- Main -->
+<div id="main"><!-- One -->
+<section id="one" class="tiles">
+<article><span class="image"><img src="images/tensorflow.jpg" alt=""></span>
+<header class="major">
+<h3><a href="tensorflow.html" class="link">Road Sign Recognition</a></h3>
+<p>TensorFlow Project</header></article>
+<article><span class="image"><img src="images/peaband.jpg" alt=""></span>
+<header class="major">
+<h3><a href="peaband.html" class="link">Conceptual Wearable Device</a></h3>
+<p>Entrepreneurship Competition</header></article>
+<article><span class="image"><img src="vpn/images/vpn.jpg" alt=""></span>
+<header class="major">
+<h3><a href="vpn/index.html" class="link">Virtual Private Network</a></h3>
+<p>Connect you to the world (in Chinese)</header></article>
+<article><span class="image"><img src="images/hyphoto.jpg" alt=""></span>
+<header class="major">
+<h3><a href="hyphoto.html" class="link">Photography</a></h3>
+<p>Landscape | City View | Portrait</header></article>
+<article><span class="image"><img src="images/me.jpg" alt=""></span>
+<header class="major">
+<h3><a href="me.html" class="link">About Me</a></h3>
+<p>Attitude | Experience</header></article></section><!-- Two -->
+<section id="two">
+<div class="inner">
+<header class="major">
+<h3>CONTACT</h3></header>
+<h4>Feel free to reach out to me by<br>
+Email: frankie.yuan[at]yahoo.com<br>
+Phone: (217)819-2998<br>
+Wechat: 15711086806</h4>
+<ul class="actions"></ul></div></section></div><!-- Footer -->
+<footer id="footer">
+<div class="inner">
+<ul class="icons">
+<li><a href="https://www.facebook.com/frankiehaoyuan" target="_blank" class="icon alt fa-facebook"><span class="label">Facebook</span></a>
+<li><a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram"><span class="label">Weibo</span></a>
+<li><a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo"><span class="label">LinkedIn</span></a>
+<li><a href="https://github.com/frankyhao" target="_blank" class="icon alt fa-github"><span class="label">GitHub</span></a>
+<li><a href="https://www.linkedin.com/in/frankie-hao-yuan/" target="_blank" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></ul>
+<ul class="copyright">
+<li>© Frankie Hao Yuan
+<li>Design: HTML5 UP</ul></div></footer></div><!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script> 
+<script src="assets/js/jquery.scrolly.min.js"></script> 
+<script src="assets/js/jquery.scrollex.min.js"></script> 
+<script src="assets/js/browser.min.js"></script> 
+<script src="assets/js/breakpoints.min.js"></script> 
+<script src="assets/js/util.js"></script> 
+<script src="assets/js/main.js"></script>
