--- a/peaband.html
+++ b/peaband.html
@@ -36,7 +36,8 @@
 <h2>Health Care</h2><span class="image main"><img src="peaband/images/3.jpg" alt=""></span>
 <p>Pea Band does more for our health. It will collect all your exercise data and transmit to your smart phone. The application on the phone will give you a suitable plan for exercising, and this plan will adjust automatically according to your true performance. Do you always forget to put your phone under your pillow at night to monitor your sleep habits? Worry no more! The Pea Band can detect your movements all night long. After analyzing, the Pea Band will wake you at the best time in your sleeping cycle.
 <h2>The Revolution</h2><span class="image main"><img src="peaband/images/4.JPG" alt=""></span>
-<p>Besides the aforementioned expected functions, Pea Band has some really revolutionary features. In order to prevent loss of flash drives, many people like our team advisor, attach them to their key chain. No more! the Pea Module doubles as a flash drive. The band is multifunctional as well doubling as a charge cable. You don't need to worry about finding the charging cable ever again.<a href="index.html" class="button">View More Projects</a></div></section></div><!-- Footer -->
+<p>Besides the aforementioned expected functions, Pea Band has some really revolutionary features. In order to prevent loss of flash drives, many people like our team advisor, attach them to their key chain. No more! the Pea Module doubles as a flash drive. The band is multifunctional as well doubling as a charge cable. You don't need to worry about finding the charging cable ever again.
+</br><a href="index.html" class="button">View More Projects</a></div></section></div><!-- Footer -->
 <footer id="footer">
 <div class="inner">
 <ul class="icons">
