--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- Wrapper -->
 <div id="wrapper"><!-- Header -->
 <header id="header" class="alt"><a href="index.html" class="logo"><strong>Frankie</strong> <span>Hao Yuan</span></a>
-<nav><a href="#menu"></a></nav><base target="_blank"></header><!-- Menu -->
+<nav><a href="#menu"></a></nav></header><!-- Menu -->
 <nav id="menu">
 <ul class="links">
 <li><a href="index.html">Home</a>
