--- a/index.html
+++ b/index.html
@@ -1,122 +1,81 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-		<title>Virtual Private Network Project by Frankie</title>
-		<meta charset="gbk" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
-				<!-- Intro -->
-					<div id="intro">
-						<h3>更安全、快速、自由的</h3>
-						<h1>网络访问</h1>
-						<p>A Virtual Private Network Project by Frankie </br>- Serving international students in China access to useful resources like Gmail, Google Academic, Wikipedia, etc.</p>
-						<a href="http://frankieyuan.com" class="button">Back To Home Page</a></br>
-							<ul class="actions">
-													</ul>
-					</div>
-
-				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">Frankie's VPN</a>
-					</header>
-
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html#header">项目介绍</a></li>
-							<li><a href="win.html">Windows</a></li>
-							<li><a href="mac.html">Mac</a></li>
-							<li><a href="android.html">安卓</a></li>
-							<li><a href="ios.html">IOS</a></li>
-						</ul>
-					</nav>
-				<!-- Main -->
-					<div id="main">
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<h2>致力于提供最快最稳定的服务</h2>
-									<h3>自18年5月以来，我们已为200+位用户提供了10+台服务器的跨洋稳定连接</h3>
-<hr>
-								</header>
-<h3>What?</h3>
-<p>我们提供最优质的代理服务，为国内人员提供访问多台海外线路以访问Google、Facebook、Instagram等网站，同时为国外的人员提供翻回国内绕过版权限制的方案。</p>
-<h3>How?</h3>
-<p>精选多家优质服务器提供商，基于Shadowsocks传输协议并使用TCP-BBR等优化算法，提供最快最稳的服务线路。DDNS方案有效避免服务器ip被封导致代理服务瘫痪。</p>
-<h3>Why Us?</h3>
-<p>比起传统的VPN服务商来说，我们在速度上有绝对性优势，服务器与用户比例合理。同时，代理可以在任何手机、电脑上安装使用，更提供微信在线一对一售后服务。
-<table border="1">
-<tr>
-<td></td>
-<td>传统服务商</td>
-<td>Frankie's</td>
-</tr>
-<tr>
-<td>服务器线路</td>
-<td>较为单一</td>
-<td>香港、台湾、韩国</br>新加坡、日本、美国</td>
-</tr>
-<tr>
-<td>设备支持</td>
-<td>仅支持手机端</td>
-<td>支持Win、MacOS、安卓、IOS</td>
-</tr>
-<tr>
-<td>IG/FB等社交平台</td>
-<td>加载速度慢</td>
-<td>基本秒开</td>
-</tr>
-<tr>
-<td>视频网站</td>
-<td>模糊且卡顿</td>
-<td>高清流畅播放</td>
-</tr>
-<tr>
-<td>售后服务</td>
-<td>不存在的</td>
-<td>微信一对一</td>
-</tr>
-<tr>
-<td>价格</td>
-<td>30元/月</td>
-<td>16元/月起</td>
-</tr>
-</table>
-<hr>
-<h3>使用教程</h3>
-<ul class="icons alt">
-<li><a href="win.html" class="icon alt fa-windows"><span class="label">Twitter</span> Windows  </a>
-<a href="mac.html" class="icon alt fa-apple"><span class="label">MacOS</span> MacOS  </a>
-<a href="#" class="icon alt fa-android"><span class="label">安卓</span> 安卓  </a>
-<a href="#" class="icon alt fa-apple"><span class="label">iOS</span> iOS  </a>
-							</article>
-
-						<!-- Posts -->
-							<section class="posts">
-							</section>
-
-					</div>
-
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; frankieyuan.com</li><li>Design: HTML5 UP</li></ul>
-					</div>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+<!DOCTYPE html>
+<title>Hao Yuan (Frankie)</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<link rel="stylesheet" href="assets/css/main.css"><noscript>
+<link rel="stylesheet" href="assets/css/noscript.css"></noscript>
+<meta name="keywords" content="Hao Yuan,Frankie Yuan, Portfolio,Personal Website">
+<meta name="description" content="Make improvements, Not excuses. Seek respect, Not attention">
+<body class="is-preload">
+<!-- Wrapper -->
+<div id="wrapper"><!-- Header -->
+<header id="header" class="alt"><a href="index.html" class="logo"><strong>Frankie</strong> <span>Hao Yuan</span></a>
+<nav><a href="#menu"></a></nav></header><!-- Menu -->
+<nav id="menu">
+<ul class="links">
+<li><a href="index.html">Home</a>
+<li><a href="tensorflow.html">Tensorflow Project</a>
+<li><a href="peaband.html">Conceptual Wearable Device</a>
+<li><a href="vpn/index.html">Vitrual Private Network</a>
+<li><a href="hyphoto.html">Amateur Photography</a>
+<li><a href="me.html">About Me</a></ul></nav><!-- Banner -->
+<section id="banner" class="major">
+<div class="inner">
+<header class="major">
+<h1>Frankie - Hao Yuan</h1></header>
+<div class="content">
+<p>make Improvements, not Excuses.<br>
+seek Respect, not Attention.
+<ul class="actions">
+<li><a href="#one" class="button next scrolly">Hear Me</a></ul>
+<ul class="actions">
+<li><a href="#two" class="button next scrolly">Contact Me</a></ul></div></div></section><!-- Main -->
+<div id="main"><!-- One -->
+<section id="one" class="tiles">
+<article><span class="image"><img src="images/tensorflow.jpg" alt=""></span>
+<header class="major">
+<h3><a href="tensorflow.html" class="link">Road Sign Recognition</a></h3>
+<p>TensorFlow Project</header></article>
+<article><span class="image"><img src="images/peaband.jpg" alt=""></span>
+<header class="major">
+<h3><a href="peaband.html" class="link">Conceptual Wearable Device</a></h3>
+<p>Entrepreneurship Competition</header></article>
+<article><span class="image"><img src="vpn/images/vpn.jpg" alt=""></span>
+<header class="major">
+<h3><a href="vpn/index.html" class="link">Virtual Private Network</a></h3>
+<p>Connect you to the world (in Chinese)</header></article>
+<article><span class="image"><img src="images/hyphoto.jpg" alt=""></span>
+<header class="major">
+<h3><a href="hyphoto.html" class="link">Photography</a></h3>
+<p>Landscape | City View | Portrait</header></article>
+<article><span class="image"><img src="images/me.jpg" alt=""></span>
+<header class="major">
+<h3><a href="me.html" class="link">About Me</a></h3>
+<p>Attitude | Experience</header></article></section><!-- Two -->
+<section id="two">
+<div class="inner">
+<header class="major">
+<h3>CONTACT</h3></header>
+<h4>Feel free to reach out to me by<br>
+Email: frankie.yuan[at]yahoo.com<br>
+Phone: (217)819-2998<br>
+Wechat: 15711086806</h4>
+<ul class="actions"></ul></div></section></div><!-- Footer -->
+<footer id="footer">
+<div class="inner">
+<ul class="icons">
+<li><a href="https://www.facebook.com/frankiehaoyuan" target="_blank" class="icon alt fa-facebook"><span class="label">Facebook</span></a>
+<li><a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram"><span class="label">Weibo</span></a>
+<li><a href="https://www.weibo.com/aoqn/" target="_blank" class="icon alt fa-weibo"><span class="label">LinkedIn</span></a>
+<li><a href="https://github.com/frankyhao" target="_blank" class="icon alt fa-github"><span class="label">GitHub</span></a>
+<li><a href="https://www.linkedin.com/in/frankie-hao-yuan/" target="_blank" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></ul>
+<ul class="copyright">
+<li>© Frankie Hao Yuan
+<li>Design: HTML5 UP</ul></div></footer></div><!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script> 
+<script src="assets/js/jquery.scrolly.min.js"></script> 
+<script src="assets/js/jquery.scrollex.min.js"></script> 
+<script src="assets/js/browser.min.js"></script> 
+<script src="assets/js/breakpoints.min.js"></script> 
+<script src="assets/js/util.js"></script> 
+<script src="assets/js/main.js"></script>
