--- a/vpn/android.html
+++ b/vpn/android.html
@@ -51,8 +51,8 @@ https://github.com/shadowsocks/shadowsocks-android/releases/download/v4.5.7/shad
 <li><a href="index.html#header" class="icon alt fa-home"><span class="label">Home</span> Home  </a>
 <li><a href="win.html" class="icon alt fa-windows"><span class="label">Windows</span> Windows  </a>
 <a href="mac.html" class="icon alt fa-apple"><span class="label">MacOS</span> MacOS  </a>
-<a href="#" class="icon alt fa-android"><span class="label">安卓</span> 安卓  </a>
-<a href="#" class="icon alt fa-apple"><span class="label">iOS</span> iOS  </a>
+<a href="android.html" class="icon alt fa-android"><span class="label">安卓</span> 安卓  </a>
+<a href="ios.html" class="icon alt fa-apple"><span class="label">iOS</span> iOS  </a>
 </section></div>
 				<!-- Copyright -->
 					<div id="copyright">
