--- a/vpn/mac.html
+++ b/vpn/mac.html
@@ -12,7 +12,7 @@
 <header id="header"><a href="index.html" class="logo">Frankie's VPN</a></header><!-- Nav -->
 <nav id="nav">
 <ul class="links">
-							<li><a href="index.html#header">项目介绍</a></li>
+							<li><a href="index.html">项目介绍</a></li>
 							<li><a href="win.html">Windows</a></li>
 							<li class="active"><a href="mac.html">Mac</a></li>
 							<li><a href="android.html">安卓</a></li>
@@ -48,6 +48,13 @@ https://github.com/shadowsocks/ShadowsocksX-NG/releases/download/v1.7.1/Shadowso
 5. 浏览器无法访问 - 请使用Safari进行测试，如不成功请至系统设置中的网络→代理→勾选<b>“自动发现代理（Auto Detect Proxy）”</b>
 <div class="image fit"><img src="images/mac2.jpg" alt=""></div>
 6. 仍然无法使用，请联系微信客服
+<h2>其他教程</h2>
+<ul class="icons alt">
+<li><a href="index.html" class="icon alt fa-home"><span class="label">Home</span> Home  </a>
+<li><a href="win.html" class="icon alt fa-windows"><span class="label">Windows</span> Windows  </a>
+<a href="mac.html" class="icon alt fa-apple"><span class="label">MacOS</span> MacOS  </a>
+<a href="android.html" class="icon alt fa-android"><span class="label">安卓</span> 安卓  </a>
+<a href="ios.html" class="icon alt fa-apple"><span class="label">iOS</span> iOS  </a>
 </section></div>
 				<!-- Copyright -->
 					<div id="copyright">
