--- a/vpn/ios.html
+++ b/vpn/ios.html
@@ -13,7 +13,7 @@
 <header id="header"><a href="index.html" class="logo">Frankie's VPN</a></header><!-- Nav -->
 <nav id="nav">
 <ul class="links">
-							<li><a href="index.html#header">项目介绍</a></li>
+							<li><a href="index.html">项目介绍</a></li>
 							<li><a href="win.html">Windows</a></li>
 							<li><a href="mac.html">Mac</a></li>
 							<li><a href="android.html">安卓</a></li>
@@ -45,6 +45,14 @@
 4. Not Config - 点击APP主页中"Current Online"下的"Add Config"→勾选中服务器（xx.xx.xx.xx），飞机图标会由灰变红</br>
 5. Existe Data - 您已经扫描过二维码，按上一条（4）中的方法操作</br>
 6. 仍然无法使用，请联系微信客服</br>
+<hr>
+<h2>其他教程</h2>
+<ul class="icons alt">
+<li><a href="index.html" class="icon alt fa-home"><span class="label">Home</span> Home  </a>
+<li><a href="win.html" class="icon alt fa-windows"><span class="label">Windows</span> Windows  </a>
+<a href="mac.html" class="icon alt fa-apple"><span class="label">MacOS</span> MacOS  </a>
+<a href="android.html" class="icon alt fa-android"><span class="label">安卓</span> 安卓  </a>
+<a href="ios.html" class="icon alt fa-apple"><span class="label">iOS</span> iOS  </a>
 </section></div>
 				<!-- Copyright -->
 					<div id="copyright">
