--- a/vpn/android.html
+++ b/vpn/android.html
@@ -12,7 +12,7 @@
 <header id="header"><a href="index.html" class="logo">Frankie's VPN</a></header><!-- Nav -->
 <nav id="nav">
 <ul class="links">
-							<li><a href="index.html#header">项目介绍</a></li>
+							<li><a href="index.html">项目介绍</a></li>
 							<li><a href="win.html">Windows</a></li>
 							<li><a href="mac.html">Mac</a></li>
 							<li class="active"><a href="android.html">安卓</a></li>
@@ -48,7 +48,7 @@ https://github.com/shadowsocks/shadowsocks-android/releases/download/v4.5.7/shad
 <hr>
 <h2>其他教程</h2>
 <ul class="icons alt">
-<li><a href="index.html#header" class="icon alt fa-home"><span class="label">Home</span> Home  </a>
+<li><a href="index.html" class="icon alt fa-home"><span class="label">Home</span> Home  </a>
 <li><a href="win.html" class="icon alt fa-windows"><span class="label">Windows</span> Windows  </a>
 <a href="mac.html" class="icon alt fa-apple"><span class="label">MacOS</span> MacOS  </a>
 <a href="android.html" class="icon alt fa-android"><span class="label">安卓</span> 安卓  </a>
