--- a/vpn/index.html
+++ b/vpn/index.html
@@ -48,9 +48,9 @@
 								</header>
 <h3>What?</h3>
 <p>我们提供最优质的代理服务，为国内人员提供访问多台海外线路以访问Google、Facebook、Instagram等网站，同时为国外的人员提供翻回国内绕过版权限制的方案。</p>
-<h3>How?</h3>
+<hr><h3>How?</h3>
 <p>精选多家优质服务器提供商，基于Shadowsocks传输协议并使用TCP-BBR等优化算法，提供最快最稳的服务线路。DDNS方案有效避免服务器ip被封导致代理服务瘫痪。</p>
-<h3>Why Us?</h3>
+<hr><h3>Why Us?</h3>
 <p>比起传统的VPN服务商来说，我们在速度上有绝对性优势，服务器与用户比例合理。同时，代理可以在任何手机、电脑上安装使用，更提供微信在线一对一售后服务。
 <table border="1">
 <tr>
@@ -94,8 +94,8 @@
 <ul class="icons alt">
 <li><a href="win.html" class="icon alt fa-windows"><span class="label">Twitter</span> Windows  </a>
 <a href="mac.html" class="icon alt fa-apple"><span class="label">MacOS</span> MacOS  </a>
-<a href="#" class="icon alt fa-android"><span class="label">安卓</span> 安卓  </a>
-<a href="#" class="icon alt fa-apple"><span class="label">iOS</span> iOS  </a>
+<a href="android.html" class="icon alt fa-android"><span class="label">安卓</span> 安卓  </a>
+<a href="ios.html" class="icon alt fa-apple"><span class="label">iOS</span> iOS  </a>
 							</article>
 
 
