--- a/vpn/index.html
+++ b/vpn/index.html
@@ -55,8 +55,8 @@
 <table border="1">
 <tr>
 <td></td>
-<td>传统服务商</td>
-<td>Frankie's</td>
+	<td><b>传统服务商</b></td>
+	<td><b>Frankie's</b></td>
 </tr>
 <tr>
 <td>服务器线路</td>
