--- a/vpn/index.html
+++ b/vpn/index.html
@@ -44,6 +44,7 @@
 								<header class="major">
 									<h2>致力于提供最快最稳定的服务</h2>
 									<h3>自18年5月以来，我们已为200+位用户提供了10+台服务器的跨洋稳定连接</h3>
+									<h3>购买请联系微信：wzguilong</h3>
 <hr>
 								</header>
 <h3>What?</h3>
