--- a/me.html
+++ b/me.html
@@ -32,7 +32,7 @@ Geek | Photogrpher | Life Explorer</div></div></section><!-- Main -->
 <section id="one">
 <div class="inner">
 <header class="major">
-<h2>My Motto and Life Persue</h2></header>
+<h2>My Motto and Pursuance</h2></header>
 <h3>MAKE IMPROVEMENTS, NOT EXCUSES.<br>
 SEEK RESPECT, NOT ATTENTION.</h3></div></section><!-- Two -->
 <section id="two" class="spotlights">
@@ -40,9 +40,11 @@ SEEK RESPECT, NOT ATTENTION.</h3></div></section><!-- Two -->
 <div class="content inner">
 <header class="major">
 <h3>I am a GEEK</h3></header>
-<p>I was born in Beijing Zhongguancun, "Silicon Valley in China". Influenced by both family and environment, I has unlimited enthusiasm for technology, especially for computer science.<br>
-Catching up every opporturnity to "dance with tech", in high school, a tech club reviewing new digital products was founded by me; I also led a team to participate Diamond Challenge, a global business concept competition held by Uniersity of Delaware.<br>
-Studying in Pre-Enginering at University of Illinois at Urbana-Champaign, there are much more chances to meet with world-leading technology. I describe myself as "A highly motivated undergraduate student who has extreme interest and passion in Artifical Intelligence and aims to be a product manager".
+<p>I was born in Beijing Zhongguancun, "Silicon Valley in China". Influenced by both family and environment, I have unlimited enthusiasm for technology, especially for computer science.</br>
+I graduated from Beijing Bayi School International Department, a place full of creativity and energetics. Seizing every opporturnity to step closer to my dream, in high school, a tech club reviewing new digital products was founded by me; I also led a team to participate Diamond Challenge, a global business concept competition held by Uniersity of Delaware.</br>
+Now, I am studying in Pre-Enginering at University of Illinois at Urbana-Champaign. There are much more chances to meet with world-leading technology. Aiming to be a sucessful product manager in Artifical Intelligence field, I am highly motivated to learn from relative academic resources and participate campus actvities. </br>
+I had an internship as software testing engineer at HXT Semiconductor Technology in Summer 2018. </br>
+<a href="https://www.linkedin.com/in/frankie-hao-yuan/">Please click here to visit my Linkedin Page to see my professional experience and resume.</a>
 <ul class="actions">
 <li><a href="index.html#one" class="button">Projects</a></ul></div></section>
 <section><a href="" class="image"><img src="images/me-photo.JPG" alt="" data-position="top center"></a>
