--- a/me.html
+++ b/me.html
@@ -44,8 +44,9 @@ SEEK RESPECT, NOT ATTENTION.</h3></div></section><!-- Two -->
 I graduated from Beijing Bayi School International Department, a place full of creativity and energetics. Seizing every opporturnity to step closer to my dream, in high school, a tech club reviewing new digital products was founded by me; I also led a team to participate Diamond Challenge, a global business concept competition held by Uniersity of Delaware.</br>
 Now, I am studying in Pre-Enginering at University of Illinois at Urbana-Champaign. There are much more chances to meet with world-leading technology. Aiming to be a sucessful product manager in Artifical Intelligence field, I am highly motivated to learn from relative academic resources and participate campus actvities. </br>
 I had an internship as software testing engineer at HXT Semiconductor Technology in Summer 2018. </br>
-<a href="https://www.linkedin.com/in/frankie-hao-yuan/">Please click here to visit my Linkedin Page to see my professional experience and resume.</a>
+Please visit Linkedin Page to see my professional experience and resume.</br>
 <ul class="actions">
+<li><a href="https://www.linkedin.com/in/frankie-hao-yuan/" class="button" target="_blank">Linkedin</a></ul></div></section>
 <li><a href="index.html#one" class="button">Projects</a></ul></div></section>
 <section><a href="" class="image"><img src="images/me-photo.JPG" alt="" data-position="top center"></a>
 <div class="content inner">
