--- a/me.html
+++ b/me.html
@@ -46,8 +46,8 @@ Now, I am studying in Pre-Enginering at University of Illinois at Urbana-Champai
 I had an internship as software testing engineer at HXT Semiconductor Technology in Summer 2018. </br>
 Please visit Linkedin Page to see my professional experience and resume.</br>
 <ul class="actions">
-<li><a href="https://www.linkedin.com/in/frankie-hao-yuan/" class="button" target="_blank">Linkedin</a></ul></div></section>
-<li><a href="index.html#one" class="button">Projects</a></ul></div></section>
+<li><a href="https://www.linkedin.com/in/frankie-hao-yuan/" class="button" target="_blank">Linkedin</a>
+<a href="index.html#one" class="button">Projects</a></ul></div></section>
 <section><a href="" class="image"><img src="images/me-photo.JPG" alt="" data-position="top center"></a>
 <div class="content inner">
 <header class="major">
