--- a/me.html
+++ b/me.html
@@ -36,7 +36,7 @@ Geek | Photogrpher | Life Explorer</div></div></section><!-- Main -->
 <h3>MAKE IMPROVEMENTS, NOT EXCUSES.<br>
 SEEK RESPECT, NOT ATTENTION.</h3></div></section><!-- Two -->
 <section id="two" class="spotlights">
-<section><a href="" class="image"><img src="images/me-geek.jpg" alt="" data-position="center center"></a>
+<section><a class="image"><img src="images/me-geek.jpg" alt="" data-position="center center"></a>
 <div class="content inner">
 <header class="major">
 <h3>I am a GEEK</h3></header>
@@ -48,14 +48,18 @@ Please visit Linkedin Page to see my professional experience and resume.</br>
 <ul class="actions">
 <li><a href="https://www.linkedin.com/in/frankie-hao-yuan/" class="button" target="_blank">Linkedin</a>
 <a href="index.html#one" class="button">Projects</a></ul></div></section>
-<section><a href="" class="image"><img src="images/me-photo.JPG" alt="" data-position="top center"></a>
+<section><a class="image"><img src="images/me-photo.JPG" alt="" data-position="top center"></a>
 <div class="content inner">
 <header class="major">
 <h3>I take PHOTOS</h3></header>
-<p>I love using photography to record this wonderful world.
+<p>I am also a big fan of photography, a way to capture valuable moments. Landscape, City View, and Portrait are three themes that I took most.</br>
+Device List:</br>
+[Sony α7r] with [Zeiss 24-70mm F4] and [Zeiss 55mm F1.8] </br>
+[Sony RX100M3] </br>
+[iPhone7Plus]
 <ul class="actions">
 <li><a href="hyphoto.html" class="button">Gallery</a></ul></div></section>
-<section><a href="" class="image"><img src="images/me-life.JPG" alt="" data-position="25% 25%"></a>
+<section><a class="image"><img src="images/me-life.JPG" alt="" data-position="25% 25%"></a>
 <div class="content inner">
 <header class="major">
 <h3>I love this WORLD</h3></header>
