--- a/me.html
+++ b/me.html
@@ -52,18 +52,21 @@ Please visit Linkedin Page to see my professional experience and resume.</br>
 <div class="content inner">
 <header class="major">
 <h3>I take PHOTOS</h3></header>
-<p>I am also a big fan of photography, a way to capture valuable moments. Landscape, City View, and Portrait are three themes that I took most.</br>
+<p>I am also a big fan of photography, a way to capture valuable moments. </br>
+  Landscape, City View, and Portrait are three themes that I took most.</br>
 Device List:</br>
-[Sony α7r] with [Zeiss 24-70mm F4] and [Zeiss 55mm F1.8] </br>
-[Sony RX100M3] </br>
-[iPhone7Plus]
+[Sony α7r] with [Zeiss 24-70mm F4] and [Zeiss 55mm F1.8]; [Sony RX100M3]; [iPhone7Plus]
 <ul class="actions">
 <li><a href="hyphoto.html" class="button">Gallery</a></ul></div></section>
 <section><a class="image"><img src="images/me-life.JPG" alt="" data-position="25% 25%"></a>
 <div class="content inner">
 <header class="major">
 <h3>I love this WORLD</h3></header>
-<p>Though everyone is living under stressness, there are still so many happiness moments.
+  <p>"Life is like not to bold adventure, then nothing."</br>
+  Yes, I am challenging myself all the time. Besides Computer Science, there are much fun roles to be for this bored life.</br>
+  In high school, I was the stage manager of "Our Town" for Bulc Amard (the reverse of Drama Club); I was Art Editor and Design Manager for Survive Magazine; I was English teacher at Immigrant Wenhua School...</br>
+  At University, even though I know nothing about art, I took Painting and World Music courses...</br>
+  What's NEXT? Idk, but I am ready for the NEXT.
 <ul class="actions">
 <li><a href="https://www.facebook.com/frankiehaoyuan" target="_blank" class="icon alt fa-facebook"><span class="label">Facebook</span></a>
 <li><a href="https://instagram.com/frankie.yuan/" target="_blank" class="icon alt fa-instagram"><span class="label">Weibo</span></a>
