--- a/tensorflow.html
+++ b/tensorflow.html
@@ -23,9 +23,10 @@
 <section id="one">
 <div class="inner">
 <header class="major">
-<h1>TensorFlow Project - Under Construction</h1>
+<h1>TensorFlow Project - Planning</h1>
 <h3>Road Sign Recognition</h3></header>
-<p>1</div></section></div><!-- Footer -->
+<p>This is a planned project to work with TensorFlow and Google Street View and let machine learn to recognize different road signs on the street.
+  </div></section></div><!-- Footer -->
 <footer id="footer">
 <div class="inner">
 <ul class="icons">
